--- a/package.json
+++ b/package.json
@@ -7,16 +7,22 @@
   "author": "bent0b0x",
   "license": "MIT",
   "scripts": {
-    "dev": "yarn webpack --watch --mode=development",
-    "prettier": "yarn prettier --write",
-    "lint-staged": {
-      "*.{ts,tsx,js,json}": ["prettier --write", "tslint --fix", "git add"]
-    }
+    "dev": "yarn webpack --watch --mode=development"
   },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "tslint --fix",
+      "git add"
+    ],
+    "*.{ts,tsx,js,json}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "devDependencies": {
     "@types/lodash": "^4.14.118",
@@ -25,7 +31,9 @@
     "babel-loader": "^8.0.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.7.0",
+    "husky": "^1.2.0",
     "jest": "^23.6.0",
+    "lint-staged": "^8.1.0",
     "prettier": "^1.15.3",
     "ts-loader": "^5.3.1",
     "tslint": "^5.11.0",
