--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,7 @@
     "noUnusedParameters": true,
     "sourceMap": true,
     "target": "es6"
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/__tests__/*"]
 }
