--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "math-expression-generator",
   "version": "0.0.0",
   "description": "JavaScript library for generating mathematical expressions that evaluate to a particular number",
-  "main": "dist/main.js",
+  "main": "dist/index.js",
   "repository": "https://github.com/bent0b0x/math-expression-generator",
   "author": "bent0b0x",
   "license": "MIT",
@@ -38,6 +38,7 @@
     "babel-loader": "^8.0.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.7.0",
+    "copy-webpack-plugin": "^4.6.0",
     "generatorics": "^1.1.0",
     "husky": "^1.2.0",
     "jest": "^23.6.0",
