--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,11 @@ jobs:
       - run: yarn test
 
   publish:
+    docker:
+      - image: circleci/node:8.9.0
+
+    working_directory: ~/repo
+
     steps:
       - run: yarn publish
 
