--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "yarn webpack --watch --mode=development",
     "generate-docs": "typedoc --tsconfig tsconfig.json --out docs/ src/generateExpression.ts src/types --excludeExternals",
     "lint": "yarn tslint -p tsconfig.json",
+    "prepublishOnly": "yarn build",
     "test": "jest",
     "test:dev": "jest --watchAll"
   },
