--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,12 +43,9 @@ jobs:
 
 workflows:
   version: 2
-  math-expression-generator:
+  tagged-build:
     jobs:
-      - build:
-          filters:
-            tags:
-              only: /^v\d+(\.\d+){2}/
+      - build
       - publish:
           filters:
             tags:
