--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,8 @@ jobs:
 
       - run: yarn test
 
+      - run: yarn build
+
   publish:
     docker:
       - image: circleci/node:8.9.0
@@ -43,9 +45,15 @@ jobs:
 
 workflows:
   version: 2
-  tagged-build:
+  build:
     jobs:
       - build
+  build-and-publish:
+    jobs:
+      - build:
+          filters:
+            tags:
+              only: /v[0-9]+(\.[0-9]+)*/
       - publish:
           filters:
             tags:
