--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "husky": "^1.2.0",
     "jest": "^23.6.0",
     "lint-staged": "^8.1.0",
-    "mathjs": "^5.3.0",
+    "mathjs": "^6.2.1",
     "prettier": "^1.15.3",
     "ts-jest": "^23.10.5",
     "ts-loader": "^5.3.1",
@@ -64,6 +64,8 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
+    "generatorics": "^1.1.0",
+    "lodash.shuffle": "^4.2.0",
     "quick-is-prime": "^1.0.7"
   }
 }
